<!--
  ~ Copyright (c) 2019. Fulton Browne
  ~  This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.andromeda.ara.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.andromeda.ara.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.andromeda.ara.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
